--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -12,12 +12,12 @@ jobs:
     
     steps:
     - name: Checkout
-    - uses: actions/checkout@v2
+      uses: actions/checkout@v2
     - name: Setup node
-    - uses: actions/setup-node@v1
+      uses: actions/setup-node@v1
       with:
         node-version: '10.x'
     - name: Install Dependencies
-    - run: npm install
+      run: npm install
     - name: ESLinting
-    - run: npm run eslint-check
+      run: npm run eslint-check
