--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -13,6 +13,11 @@ jobs:
     steps:
     - name: Checkout
       uses: actions/checkout@v2
+    - name: files-present-action
+      uses: JJ/files-present-action@releases/v1
+      with:
+        # Array describing the files
+        files: "README.md, .prettierrc.js, .eslintrc.js, .gitignore, package.json, LICENSE, THIRD_PARTY_NOTICES.md, CODE_OF_CONDUCT.md, cla.md, .github/ISSUE_TEMPLATE/BUG_REPORT.md, .github/ISSUE_TEMPLATE/enhancement.md, nr1.json, catalog/config.json"
     - name: Setup node
       uses: actions/setup-node@v1
       with:
