--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -17,7 +17,9 @@ jobs:
       uses: JJ/files-present-action@releases/v1
       with:
         # Array describing the files
-        files: "README.md, .prettierrc.js, .eslintrc.js, .gitignore, package.json, LICENSE, THIRD_PARTY_NOTICES.md, CODE_OF_CONDUCT.md, cla.md, .github/ISSUE_TEMPLATE/bug_report.md, .github/ISSUE_TEMPLATE/enhancement.md, nr1.json, catalog/config.json"
+        files: | #"README.md, .prettierrc.js, .eslintrc.js, .gitignore, package.json, LICENSE, THIRD_PARTY_NOTICES.md, CODE_OF_CONDUCT.md, cla.md, .github/ISSUE_TEMPLATE/bug_report.md, .github/ISSUE_TEMPLATE/enhancement.md, nr1.json, catalog/config.json"
+          "README.md"
+          ", .prettierrc.js""
     - name: Setup node
       uses: actions/setup-node@v1
       with:
@@ -30,3 +32,5 @@ jobs:
       run: nr1 nerdpack:build
     - name: ESLinting
       run: npm run eslint-check
+    - name: Test Code
+      run: npm test
