--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -18,8 +18,8 @@ jobs:
       with:
         # Array describing the files
         files: | #"README.md, .prettierrc.js, .eslintrc.js, .gitignore, package.json, LICENSE, THIRD_PARTY_NOTICES.md, CODE_OF_CONDUCT.md, cla.md, .github/ISSUE_TEMPLATE/bug_report.md, .github/ISSUE_TEMPLATE/enhancement.md, nr1.json, catalog/config.json"
-          "README.md"
-          ", .prettierrc.js""
+          README.md
+          ,.prettierrc.js
     - name: Setup node
       uses: actions/setup-node@v1
       with:
