--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -1,4 +1,4 @@
-name: Pull Request
+name: CI
 
 on: 
   pull_request:
@@ -11,26 +11,43 @@ jobs:
     runs-on: ubuntu-latest
     
     steps:
+    # Checkout base repo
     - name: Checkout
       uses: actions/checkout@v2
+      
+    # This would checkout all the submodules, even though we only need the one for _this_ PR
+    - name: Checkout submodules
+      uses: srt32/git-actions@v0.0.3
+      with:
+        args: git submodule update --init --recursive
+    
+    # This would checkout submodule `foo` (if we can get foo...)
+    #- uses: Mushus/checkout-submodule@v1
+    #  with:
+    #    submodulePath: ./foo
+    
     - name: files-present-action
       uses: JJ/files-present-action@releases/v1
       with:
         # Array describing the files
-        files: | #"README.md, .prettierrc.js, .eslintrc.js, .gitignore, package.json, LICENSE, THIRD_PARTY_NOTICES.md, CODE_OF_CONDUCT.md, cla.md, .github/ISSUE_TEMPLATE/bug_report.md, .github/ISSUE_TEMPLATE/enhancement.md, nr1.json, catalog/config.json"
-          README.md
-          ,.prettierrc.js
+        files: "README.md, .prettierrc.js, .eslintrc.js, .gitignore, package.json, LICENSE, THIRD_PARTY_NOTICES.md, CODE_OF_CONDUCT.md, cla.md, .github/ISSUE_TEMPLATE/bug_report.md, .github/ISSUE_TEMPLATE/enhancement.md, nr1.json, catalog/config.json"
+    
     - name: Setup node
       uses: actions/setup-node@v1
       with:
         node-version: '10.x'
+    
     - name: Install Dependencies
       run: npm install
+    
     - name: Install NR1 CLI
       run: curl -s https://cli.nr-ext.net/installer.sh | sudo bash
+    
     - name: NR1 Nerdpack Build
       run: nr1 nerdpack:build
+    
     - name: ESLinting
       run: npm run eslint-check
+    
     - name: Test Code
       run: npm test
