feat: adding ls for repo content

--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -15,12 +15,20 @@ jobs:
     - name: Checkout
       uses: actions/checkout@v2
       
+    # List contents of repo
+    - name: Content list
+      uses: enricomarino/actions@v2
+      
     # This would checkout all the submodules, even though we only need the one for _this_ PR
     - name: Checkout submodules
       uses: srt32/git-actions@v0.0.3
       with:
         args: git submodule update --init --recursive
     
+    # List contents of repo
+    - name: Content list
+      uses: enricomarino/actions@v2
+            
     # This would checkout submodule `foo` (if we can get foo...)
     #- uses: Mushus/checkout-submodule@v1
     #  with:
