feat: console log GitHub context

--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -11,15 +11,19 @@ jobs:
     runs-on: ubuntu-latest
     
     steps:
+    - name: Dump GitHub context
+      env:
+        GITHUB_CONTEXT: ${{ toJson(github) }}
+      run: echo "$GITHUB_CONTEXT"
+    
     # Checkout base repo
     - name: Checkout
       uses: actions/checkout@v2
     
+    
     # List contents of repo
-    - name: echo List directory
-      run:  echo ls
     - name: List directory
-      run:  ls
+      run:  ls -la
       
     # This would checkout all the submodules, even though we only need the one for _this_ PR
     - name: Checkout submodules
@@ -28,10 +32,8 @@ jobs:
         args: git submodule update --init --recursive
     
     # List contents of repo
-    - name: echo List directory
-      run:  echo ls
     - name: List directory
-      run:  ls
+      run:  ls -la
             
     # This would checkout submodule `foo` (if we can get foo...)
     #- uses: Mushus/checkout-submodule@v1
@@ -57,6 +59,22 @@ jobs:
     
     - name: NR1 Nerdpack Build
       run: nr1 nerdpack:build
+    
+    # Validate Ability to publish code (Issue #2)
+    # Requires API key
+    #- name: NR1 Nerdpack Build
+    #  run: nr1 nerdpack:publish --dry-run
+    
+    #- name: Publish and deploy Nerdpack
+    #  env:
+    #    NR1_API_KEY: ${{ secrets.DEMOTRON_V2_API_KEY }}
+    #    NR1_REGION: us
+    #  run: |
+    #    nr1 profiles:add --name workflow --api-key "$NR1_API_KEY" --region "$NR1_REGION" &&
+    #    nr1 nerdpack:publish --dry-run
+
+#        nr1 nerdpack:publish --profile=workflow &&
+#        nr1 nerdpack:deploy --channel="$NR1_DEPLOY_CHANNEL"
     
     - name: ESLinting
       run: npm run eslint-check
