--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -69,7 +69,7 @@ jobs:
         run: npm ci
 
       - name: Install OSS CLI
-      - run: |
+        run: |
           sudo npm install -g @newrelic/newrelic-oss-cli
 
       # - add_ssh_keys:
