fix: allow eslint to fail on purpose

--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -87,6 +87,7 @@ jobs:
       - name: Run eslint-check and generate report
         run: |
           npm run eslint-check -- --output-file eslint_report.json --format json
+        continue-on-error: true
 
       - name: Annotate Lint Results
         uses: ataylorme/eslint-annotate-action@1.0.4
