--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -97,18 +97,18 @@ jobs:
             oss third-party manifest
             oss third-party notices
 
-            # git add third_party_manifest.json
-            # git add THIRD_PARTY_NOTICES.md
+            git add third_party_manifest.json
+            git add THIRD_PARTY_NOTICES.md
 
-            # git commit -m 'chore: update third-party manifest and notices [skip ci]'
-            # git push origin ${GITHUB_REF#/refs/heads/} 
+            git commit -m 'chore: update third-party manifest and notices [skip ci]'
+            git push origin ${GITHUB_REF#/refs/heads/} 
           else
             echo "No change in package.json, not regenerating third-party notices"
           fi
 
   job-generate-release:
     runs-on: ubuntu-latest
-    needs: job-checkout-and-build
+    needs: [job-checkout-and-build, job-generate-third-party-notices]
     steps:
       - name: Checkout repo
         uses: actions/checkout@v2
