--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,15 +1,15 @@
 name: CI
 
-env:
-  THIRD_PARTY_GIT_AUTHOR_EMAIL: opensource+template-nerdpack@newrelic.com
-  THIRD_PARTY_GIT_AUTHOR_NAME: Actionbot
-
 on:
   push:
     branches:
       - master
   repository_dispatch:
     types: [semantic-release]
+
+env:
+  THIRD_PARTY_GIT_AUTHOR_EMAIL: opensource+template-nerdpack@newrelic.com
+  THIRD_PARTY_GIT_AUTHOR_NAME: Actionbot
 
 jobs:
   job-checkout-and-build:
@@ -52,6 +52,8 @@ jobs:
     steps:
       - name: Checkout repo
         uses: actions/checkout@v2
+        with:
+          ref: master
 
       - name: Setup Node.js
         uses: actions/setup-node@v1
