--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -45,7 +45,6 @@ jobs:
           nr1 nerdpack:build
           nr1 nerdpack:validate
 
-  # job-test # needed??
   job-generate-third-party-notices:
     runs-on: ubuntu-latest
     needs: job-checkout-and-build
@@ -53,6 +52,8 @@ jobs:
       - name: Checkout repo
         uses: actions/checkout@v2
 
+      # Probably not necessary since the ubuntu-latest image would have latest Node LTS release
+      # and nothing in this job _needs_ older Node
       - name: Setup Node.js
         uses: actions/setup-node@v1
         with:
@@ -76,10 +77,6 @@ jobs:
         run: |
           sudo npm install -g @newrelic/newrelic-oss-cli
 
-      # - add_ssh_keys:
-      #     fingerprints:
-      #       - *deploy-key-fingerprint
-
       - name: Generate Third Party Notices
         run: |
           if [ ! -f "third_party_manifest.json" ]; then
@@ -93,7 +90,6 @@ jobs:
           # latest commit where package.json was changed
           LAST_CHANGED_COMMIT=$(git log -1 --format=format:%H --full-diff package.json)
 
-          #TODO: use correct branch/settings for commiting files back
           if [ $LAST_CHANGED_COMMIT = $LATEST_COMMIT ]; then
             git config user.email "${{ env.THIRD_PARTY_GIT_AUTHOR_EMAIL }}"
             git config user.name "${{ env.THIRD_PARTY_GIT_AUTHOR_NAME }}"
@@ -138,7 +134,7 @@ jobs:
       - name: Install dependencies
         run: npm ci
 
-      - name: Release
+      - name: Run semantic-release
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: npx semantic-release
