Revert "test: error handling"
This reverts commit f01e4f606852d8cc3e2524ea6d92157a218b913f.

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -80,7 +80,7 @@ jobs:
       - name: Generate Third Party Notices
         run: |
           if [ ! -f "third_party_manifest.json" ]; then
-            echo "::error::third_party_manifest.json is missing. Must generate using the newrelic-oss-cli."
+            echo "Error: third_party_manifest.json is missing. Must generate using the newrelic-oss-cli."
             exit 1
           fi
 
