--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -72,6 +72,7 @@ jobs:
         run: npm ci
 
       - name: Run eslint-check and generate report
+        id: eslint-check
         run: |
           npm run eslint-check -- --output-file eslint_report.json --format json
         continue-on-error: true
@@ -81,6 +82,13 @@ jobs:
         with:
           repo-token: ${{ secrets.GITHUB_TOKEN }}
           report-json: eslint_report.json
+        continue-on-error: true
+      
+      - name: Check eslint-check outcome
+        if: steps.eslint-check.outcome != 'success'
+        run: |
+          echo "::error::eslint-check failed. View output of _Run eslint-check and generate report_ step"
+          exit 1
 
   test:
     name: test
@@ -122,9 +130,9 @@ jobs:
       - name: Checkout repo
         uses: actions/checkout@v2
 
-      # TODO: Use custom nerdpack-oss-file-validation-action instead
       - name: Validate Open Source Files
         uses: newrelic/validate-nerdpack-action@v1
+      
       - name: Install NR1 CLI
         run: |
           curl -s https://cli.nr-ext.net/installer.sh | sudo bash
