--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -8,8 +8,8 @@ on:
     types: [semantic-release]
 
 env:
-  THIRD_PARTY_GIT_AUTHOR_EMAIL: opensource+template-nerdpack@newrelic.com
-  THIRD_PARTY_GIT_AUTHOR_NAME: Actionbot
+  THIRD_PARTY_GIT_AUTHOR_EMAIL: jeveland@newrelic.com
+  THIRD_PARTY_GIT_AUTHOR_NAME: jbeveland27
 
 jobs:
   job-checkout-and-build:
@@ -21,7 +21,7 @@ jobs:
       - name: Setup Node.js
         uses: actions/setup-node@v1
         with:
-          node-version: 10
+          node-version: 10.x
 
       - name: Cache node_modules
         id: cache-node-modules
@@ -57,7 +57,7 @@ jobs:
       - name: Setup Node.js
         uses: actions/setup-node@v1
         with:
-          node-version: 10
+          node-version: 10.x
 
       - name: Download Cached Deps
         id: cache-node-modules
@@ -78,6 +78,9 @@ jobs:
           sudo npm install -g @newrelic/newrelic-oss-cli
 
       - name: Generate Third Party Notices
+        id: generate-notices
+        env:
+          GITHUB_TOKEN: ${{ secrets.NEWRELIC_BOT_TOKEN }}
         run: |
           if [ ! -f "third_party_manifest.json" ]; then
             echo "::error::third_party_manifest.json is missing. Must generate using the newrelic-oss-cli."
@@ -93,6 +96,8 @@ jobs:
           if [ $LAST_CHANGED_COMMIT = $LATEST_COMMIT ]; then
             git config user.email "${{ env.THIRD_PARTY_GIT_AUTHOR_EMAIL }}"
             git config user.name "${{ env.THIRD_PARTY_GIT_AUTHOR_NAME }}"
+            # Update origin with token
+            git remote set-url origin https://x-access-token:${GITHUB_TOKEN}@github.com/newrelic/nr1-browser-analyzer.git
 
             oss third-party manifest
             oss third-party notices
@@ -101,10 +106,16 @@ jobs:
             git add THIRD_PARTY_NOTICES.md
 
             git commit -m 'chore: update third-party manifest and notices [skip ci]'
-            git push origin ${GITHUB_REF#/refs/heads/} 
+            echo "::set-output name=commit::true"
           else
             echo "No change in package.json, not regenerating third-party notices"
           fi
+      
+      # - name: Push Commit
+      #   if: steps.generate-notices.outputs.commit == 'true'
+      #   uses: ad-m/github-push-action@v0.5.0
+      #   with:
+      #     github_token: ${{ secrets.NEWRELIC_BOT_TOKEN }}
 
   job-generate-release:
     runs-on: ubuntu-latest
@@ -118,7 +129,7 @@ jobs:
       - name: Setup Node.js
         uses: actions/setup-node@v1
         with:
-          node-version: 10
+          node-version: 10.x
 
       - name: Download Cached Deps
         id: cache-node-modules
