--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -45,80 +45,77 @@ jobs:
           nr1 nerdpack:build
           nr1 nerdpack:validate
 
-  job-generate-third-party-notices:
-    runs-on: ubuntu-latest
-    needs: job-checkout-and-build
-    steps:
-      - name: Checkout repo
-        uses: actions/checkout@v2
+  # job-generate-third-party-notices:
+  #   runs-on: ubuntu-latest
+  #   needs: job-checkout-and-build
+  #   steps:
+  #     - name: Checkout repo
+  #       uses: actions/checkout@v2
 
-      # Probably not necessary since the ubuntu-latest image would have latest Node LTS release
-      # and nothing in this job _needs_ older Node
-      - name: Setup Node.js
-        uses: actions/setup-node@v1
-        with:
-          node-version: 10.x
+  #     # Probably not necessary since the ubuntu-latest image would have latest Node LTS release
+  #     # and nothing in this job _needs_ older Node
+  #     - name: Setup Node.js
+  #       uses: actions/setup-node@v1
+  #       with:
+  #         node-version: 10.x
 
-      - name: Download Cached Deps
-        id: cache-node-modules
-        uses: actions/cache@v1
-        env:
-          cache-name: node-modules
-        with:
-          path: ~/.npm
-          key: ${{ runner.os }}-${{ env.cache-name }}-${{ hashFiles('**/package-lock.json') }}
-          restore-keys: |
-            ${{ runner.os }}-${{ env.cache-name }}-
+  #     - name: Download Cached Deps
+  #       id: cache-node-modules
+  #       uses: actions/cache@v1
+  #       env:
+  #         cache-name: node-modules
+  #       with:
+  #         path: ~/.npm
+  #         key: ${{ runner.os }}-${{ env.cache-name }}-${{ hashFiles('**/package-lock.json') }}
+  #         restore-keys: |
+  #           ${{ runner.os }}-${{ env.cache-name }}-
 
-      - name: Install Dependencies
-        run: npm ci
+  #     - name: Install Dependencies
+  #       run: npm ci
 
-      - name: Install OSS CLI
-        run: |
-          sudo npm install -g @newrelic/newrelic-oss-cli
+  #     - name: Install OSS CLI
+  #       run: |
+  #         sudo npm install -g @newrelic/newrelic-oss-cli
 
-      - name: Generate Third Party Notices
-        id: generate-notices
-        env:
-          NEWRELIC_BOT_TOKEN: ${{ secrets.NEWRELIC_BOT_TOKEN }}
-          GITHUB_TOKEN: ${{ secrets.NEWRELIC_BOT_TOKEN }}
-        run: |
-          if [ ! -f "third_party_manifest.json" ]; then
-            echo "::error::third_party_manifest.json is missing. Must generate using the newrelic-oss-cli."
-            exit 1
-          fi
+  #     - name: Generate Third Party Notices
+  #       id: generate-notices
+  #       run: |
+  #         if [ ! -f "third_party_manifest.json" ]; then
+  #           echo "::error::third_party_manifest.json is missing. Must generate using the newrelic-oss-cli."
+  #           exit 1
+  #         fi
 
-          # latest commit
-          LATEST_COMMIT=$(git rev-parse HEAD)
+  #         # latest commit
+  #         LATEST_COMMIT=$(git rev-parse HEAD)
 
-          # latest commit where package.json was changed
-          LAST_CHANGED_COMMIT=$(git log -1 --format=format:%H --full-diff package.json)
+  #         # latest commit where package.json was changed
+  #         LAST_CHANGED_COMMIT=$(git log -1 --format=format:%H --full-diff package.json)
 
-          if [ $LAST_CHANGED_COMMIT = $LATEST_COMMIT ]; then
-            git config user.email "${{ env.THIRD_PARTY_GIT_AUTHOR_EMAIL }}"
-            git config user.name "${{ env.THIRD_PARTY_GIT_AUTHOR_NAME }}"
-            # Update origin with token
-            # git remote set-url origin https://jbeveland27:${NEWRELIC_BOT_TOKEN}@github.com/jbeveland27/prototype-nr1-actions.git
+  #         if [ $LAST_CHANGED_COMMIT = $LATEST_COMMIT ]; then
+  #           git config user.email "${{ env.THIRD_PARTY_GIT_AUTHOR_EMAIL }}"
+  #           git config user.name "${{ env.THIRD_PARTY_GIT_AUTHOR_NAME }}"
+  #           # Update origin with token
+  #           # git remote set-url origin https://jbeveland27:${NEWRELIC_BOT_TOKEN}@github.com/jbeveland27/prototype-nr1-actions.git
 
-            oss third-party manifest
-            oss third-party notices
+  #           oss third-party manifest
+  #           oss third-party notices
 
-            git add third_party_manifest.json
-            git add THIRD_PARTY_NOTICES.md
+  #           git add third_party_manifest.json
+  #           git add THIRD_PARTY_NOTICES.md
 
-            git commit -m 'chore: update third-party manifest and notices [skip ci]'
-            # git push origin ${GITHUB_REF#/refs/heads/} 
-            echo "::set-output name=commit::true"
-          else
-            echo "No change in package.json, not regenerating third-party notices"
-          fi
+  #           git commit -m 'chore: update third-party manifest and notices [skip ci]'
+  #           # git push origin ${GITHUB_REF#/refs/heads/} 
+  #           echo "::set-output name=commit::true"
+  #         else
+  #           echo "No change in package.json, not regenerating third-party notices"
+  #         fi
       
-      - name: Push Commit
-        if: steps.generate-notices.outputs.commit == 'true'
-        uses: ad-m/github-push-action@v0.6.0
-        with:
-          github_token: ${{ secrets.NEWRELIC_BOT_TOKEN }}
-          force: true
+  #     - name: Push Commit
+  #       if: steps.generate-notices.outputs.commit == 'true'
+  #       uses: ad-m/github-push-action@v0.6.0
+  #       with:
+  #         github_token: ${{ secrets.NEWRELIC_BOT_TOKEN }}
+  #         force: true
 
   job-generate-release:
     runs-on: ubuntu-latest
