--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -8,8 +8,8 @@ on:
     types: [semantic-release]
 
 env:
-  THIRD_PARTY_GIT_AUTHOR_EMAIL: opensource+template-nerdpack@newrelic.com
-  THIRD_PARTY_GIT_AUTHOR_NAME: Newrelic-bot
+  THIRD_PARTY_GIT_AUTHOR_EMAIL: opensource+newrelicbot@newrelic.com
+  THIRD_PARTY_GIT_AUTHOR_NAME: Newrelicbot
 
 jobs:
   job-checkout-and-build:
